Проверка цветовых тем

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </section>
 
       <section class="content-section section-concentrate">
-        <h2 class="section__title section__title-indentation">Что снижает концентрацию внимания?</h2>
+        <h2 class="section__title">Что снижает концентрацию внимания?</h2>
         <div class="section-concentrate-card">
           <ul class="wrapper-card">
             <li>
@@ -87,13 +87,13 @@
           </li>
           <li>
             <article>
-              <h3 class="title-decor title-decor-no-margin">Еда</h3>
+              <h3 class="title-decor title-decor-offset">Еда</h3>
               <p class="section__text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
             </article>
           </li>
           <li>
             <article>
-              <h3 class="title-decor title-decor-no-margin">Гаджеты</h3>
+              <h3 class="title-decor title-decor-offset">Гаджеты</h3>
               <p class="section__text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
             </article>
             </li>
@@ -102,7 +102,7 @@
         </section>
 
       <section class="content-section section-recommendation">
-        <h2 class="section__title section__title-indentation">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+        <h2 class="section__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         <div class="section-recommendation-card">
         <h3 class="title-decor title-decor-no-margin">5 простых (на самом деле не очень) советов</h3>
         <ul>
